tweaked the headline to disappear when in contact with fixed nav while scrolling to avoid overlapping

--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ ul {
 .get-tickets {
     position: relative;
     top: 100px;
-    
+    padding: 9px 50px;
 }
 
 
